--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
