--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
