--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.0.1"
   }
 }
