--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.2",
     "@types/gsap": "^3.0.0",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "framer-motion": "^10.12.16",
     "gsap": "^3.11.5",
     "next": "13.3.1",
     "postcss": "8.4.23",
@@ -23,6 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-id-swiper": "^4.0.0",
+    "react-intersection-observer": "^9.4.4",
+    "react-scroll": "^1.8.9",
     "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
@@ -31,6 +36,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.0.1"
+    "@cloudflare/next-on-pages": "^1.0.1",
+    "@types/react-scroll": "^1.8.7"
   }
 }
