--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-id-swiper": "^4.0.0",
     "react-intersection-observer": "^9.4.4",
     "react-scroll": "^1.8.9",
+    "react-scroll-parallax": "^3.4.2",
     "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
