--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "dependencies": {
     "@formspree/react": "^2.4.2",
     "@types/gsap": "^3.0.0",
-    "@types/node": "18.16.2",
-    "@types/react": "18.2.0",
+    "@types/node": "^18.16.2",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.16",
-    "gsap": "^3.11.5",
+    "gsap": "^3.12.1",
+    "jquery": "^3.7.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "react": "18.2.0",
+    "react-animated-cursor": "^2.7.0",
     "react-dom": "18.2.0",
     "react-id-swiper": "^4.0.0",
     "react-intersection-observer": "^9.4.4",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.0.1",
+    "@types/jquery": "^3.5.16",
     "@types/react-scroll": "^1.8.7"
   }
 }
