--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.16",
@@ -31,6 +32,7 @@
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
     "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
     "swiper": "^9.3.2",
